--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,14 +11,14 @@ jobs:
     name: Build and deploy
     runs-on: ubuntu-latest
     env:
-      MY_SECRET   : ${{secrets.GH_ACCESS_TOKEN}}
-      USER_NAME   : <Your Git username>
-      USER_EMAIL  : <Your Git email>
-      BOOK_DIR    : your_book_sources_folder_name
+      MY_SECRET: ${{secrets.GH_ACCESS_TOKEN}}
+      USER_NAME: bgoonz
+      USER_EMAIL: bgoonzbryan.guner@gmail.com
+      BOOK_DIR: your_book_sources_folder_name
 
     steps:
-    - name: Checkout 🛎️
-      uses: actions/checkout@v2.3.1
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
 
-    - name: Build and Deploy 🚀
-      uses: onejar99/gitbook-build-publish-action@v1.0.2
+      - name: Build and Deploy 🚀
+        uses: onejar99/gitbook-build-publish-action@v1.0.2
